--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,10 @@ dependencies:
   flutter_launcher_icons: ^0.9.3
   change_app_package_name: ^1.1.0
   rename_app: ^1.1.0
+  flutter_native_splash: ^2.2.0+1
+  iconly: ^1.0.1
+  expandable_text: ^2.3.0
+  iconsax: ^0.0.8
 
 dev_dependencies:
   flutter_test:
@@ -37,6 +41,11 @@ flutter_icons:
   android: true
   ios: true
   image_path: "assets/images/app_icon.png"
+
+flutter_native_splash:
+  background_image: assets/images/app_logo.png
+  android: true
+  ios: true
 
 flutter:
   uses-material-design: true
