--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,15 +18,16 @@ dependencies:
   dio: ^4.0.6
   get_storage: ^2.0.3
   firebase_core: ^1.20.0
-  firebase_messaging: ^12.0.1
+  firebase_messaging: ^13.1.0
   awesome_notifications: ^0.6.21
-  flutter_launcher_icons: ^0.9.3
+  flutter_launcher_icons: ^0.10.0
   change_app_package_name: ^1.1.0
   rename_app: ^1.1.0
   flutter_native_splash: ^2.2.0+1
   iconly: ^1.0.1
   expandable_text: ^2.3.0
   iconsax: ^0.0.8
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
