--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   iconsax: ^0.0.8
   http: ^0.13.5
   file_picker: ^5.2.2
+  lottie: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -55,6 +56,7 @@ flutter:
     - assets/images/
     - assets/vectors/
     - assets/fonts/
+    - animations/
 
   fonts:
     - family: Poppins
