--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,10 +17,10 @@ dependencies:
   hive_flutter: ^1.1.0
   dio: ^4.0.6
   get_storage: ^2.0.3
-  firebase_core: ^1.20.0
-  firebase_messaging: ^13.1.0
-  awesome_notifications: ^0.6.21
-  flutter_launcher_icons: ^0.10.0
+  firebase_core: ^2.4.1
+  firebase_messaging: ^14.2.1
+  awesome_notifications: ^0.7.4+1
+  flutter_launcher_icons: ^0.11.0
   change_app_package_name: ^1.1.0
   rename_app: ^1.1.0
   flutter_native_splash: ^2.2.0+1
@@ -36,7 +36,7 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^2.0.0
   build_runner: ^2.2.0
-  hive_generator: ^1.1.3
+  hive_generator: ^2.0.0
 
 
 
