--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,11 @@
 name: getx_standard
-description: A new Flutter project.
-publish_to: 'none'
 version: 1.0.0+1
-environment:
-  sdk: ">=2.17.5 <3.0.0"
-
+publish_to: none
+description: A new Flutter project.
+environment: 
+  sdk: '>=2.16.0 <3.0.0'
 
 dependencies:
-  flutter:
-    sdk: flutter
   cupertino_icons: ^1.0.2
   get: ^4.6.5
   logger: ^1.1.0
@@ -16,7 +13,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   dio: ^4.0.6
-  get_storage: ^2.0.3
+  shared_preferences: ^2.0.17
   firebase_core: ^2.4.1
   firebase_messaging: ^14.2.1
   awesome_notifications: ^0.7.4+1
@@ -31,14 +28,20 @@ dependencies:
   file_picker: ^5.2.2
   lottie: ^2.0.0
 
-dev_dependencies:
-  flutter_test:
+  flutter: 
     sdk: flutter
-  flutter_lints: ^2.0.0
-  build_runner: ^2.2.0
-  hive_generator: ^2.0.0
 
+dev_dependencies:
+  mockito:
+  flutter_lints:
+  build_runner:  # generate dart files
+  hive_generator: # generate hive files
 
+  integration_test:
+    sdk: flutter
+
+  flutter_test: 
+    sdk: flutter
 
 flutter_icons:
   android: true
@@ -46,14 +49,16 @@ flutter_icons:
   image_path: "assets/images/app_icon.png"
 
 flutter_native_splash:
-  background_image: assets/images/app_logo.png
+  background_image: assets/images/splash.png
   android: true
   ios: true
 
-flutter:
+flutter: 
   uses-material-design: true
+
   assets:
     - assets/images/
+    - assets/vectors/
     - assets/fonts/
     - animations/
 
@@ -74,3 +79,4 @@ flutter:
           weight: 500
         - asset: assets/fonts/Cairo-SemiBold.ttf
           weight: 900
+
