--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,6 @@
 .buildlog/
 .history
 .svn/
-migrate_working_dir/
 
 # IntelliJ related
 *.iml
@@ -33,6 +32,8 @@ migrate_working_dir/
 /build/
 
 # Web related
+lib/generated_plugin_registrant.dart
+lib/firebase_options.dart
 
 # Symbolication related
 app.*.symbols
