--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,11 @@ dependencies:
   file_picker: ^5.2.2
   lottie: ^2.0.0
   ionicons: ^0.2.2
+  flutter_otp_text_field: ^1.1.0
 
   flutter: 
     sdk: flutter
+
 
 
 
