--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,12 @@ dependencies:
   rename_app: ^1.1.0
   flutter_launcher_icons: ^0.11.0
   flutter_native_splash: ^2.2.0+1
+  firebase_core: ^2.13.1
+  firebase_auth: ^4.6.2
+  cloud_firestore: ^4.8.0
+  carousel_slider: ^4.2.1
+  cached_network_image: ^3.2.3
+  graphql_flutter: ^5.1.0
 
 
 
