--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   carousel_slider: ^4.2.1
   cached_network_image: ^3.2.3
   graphql_flutter: ^5.1.0
-  awesome_dialog: ^3.1.0
+  intl: ^0.17.0
 
 
 
