--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   logger: ^1.4.0
   flutter_screenutil: ^5.8.4
   dio: ^5.2.1+1
+  http: ^0.13.6
   shared_preferences: ^2.2.0
   change_app_package_name: ^1.1.0
   iconly: ^1.0.1
@@ -36,11 +37,14 @@ dependencies:
   firebase_core: ^2.14.0
   firebase_auth: ^4.6.3
   cloud_firestore: ^4.8.2
+  firebase_messaging: ^14.6.4
+  awesome_notifications: ^0.7.4+1
   carousel_slider: ^4.2.1
   cached_network_image: ^3.2.3
   graphql_flutter: ^5.1.0
   intl: ^0.18.1
   animated_text_kit: ^4.2.2
+  device_info_plus: ^9.0.2
 
 dev_dependencies:
   flutter_test:
@@ -52,6 +56,7 @@ dev_dependencies:
 flutter_icons:
   android: true
   ios: true
+  remove_alpha_ios: true
   image_path: "assets/images/icon-splash/app_icon.png"
 
 flutter_native_splash:
