--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,10 +18,10 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   get: ^4.6.5
-  logger: ^1.4.0
+  logger: ^2.0.1
   flutter_screenutil: ^5.8.4
   dio: ^5.2.1+1
-  http: ^0.13.6
+  http: ^1.1.0
   shared_preferences: ^2.2.0
   change_app_package_name: ^1.1.0
   iconly: ^1.0.1
@@ -31,20 +31,24 @@ dependencies:
   lottie: ^2.4.0
   ionicons: ^0.2.2
   flutter_otp_text_field: ^1.1.1
-  rename_app: ^1.1.0
-  flutter_launcher_icons: ^0.11.0
+  flutter_launcher_icons: ^0.13.1
   flutter_native_splash: ^2.2.0+1
   firebase_core: ^2.14.0
   firebase_auth: ^4.6.3
   cloud_firestore: ^4.8.2
   firebase_messaging: ^14.6.4
-  awesome_notifications: ^0.7.4+1
   carousel_slider: ^4.2.1
   cached_network_image: ^3.2.3
   graphql_flutter: ^5.1.0
   intl: ^0.18.1
   animated_text_kit: ^4.2.2
   device_info_plus: ^9.0.2
+  flutter_local_notifications: ^15.1.0+1
+  timezone: ^0.9.2
+  flutter_timezone: ^1.0.7
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  connectivity_plus: ^4.0.2
 
 dev_dependencies:
   flutter_test:
@@ -52,6 +56,10 @@ dev_dependencies:
 
 
   flutter_lints: ^2.0.0
+  mockito:
+  build_runner:
+  hive_generator:
+  pub_semver:
 
 flutter_icons:
   android: true
