--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,36 +16,34 @@ dependencies:
 
 
 
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.5
   get: ^4.6.5
   logger: ^2.0.1
   flutter_screenutil: ^5.8.4
-  dio: ^5.2.1+1
+  dio: ^5.3.2
   http: ^1.1.0
   shared_preferences: ^2.2.0
   change_app_package_name: ^1.1.0
   iconly: ^1.0.1
   iconsax: ^0.0.8
   expandable_text: ^2.3.0
-  file_picker: ^5.3.2
-  lottie: ^2.4.0
+  file_picker: ^5.3.3
+  lottie: ^2.6.0
   ionicons: ^0.2.2
   flutter_otp_text_field: ^1.1.1
   flutter_launcher_icons: ^0.13.1
-  flutter_native_splash: ^2.2.0+1
-  firebase_core: ^2.14.0
-  firebase_auth: ^4.6.3
-  cloud_firestore: ^4.8.2
-  firebase_messaging: ^14.6.4
+  flutter_native_splash: ^2.3.2
+  firebase_core: ^2.15.0
+  firebase_auth: ^4.7.2
+  cloud_firestore: ^4.8.4
+  firebase_messaging: ^14.6.5
   carousel_slider: ^4.2.1
   cached_network_image: ^3.2.3
-  graphql_flutter: ^5.1.0
+  graphql_flutter: ^5.1.2
   intl: ^0.18.1
   animated_text_kit: ^4.2.2
-  device_info_plus: ^9.0.2
+  device_info_plus: ^9.0.3
   flutter_local_notifications: ^15.1.0+1
-  timezone: ^0.9.2
-  flutter_timezone: ^1.0.7
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   connectivity_plus: ^4.0.2
@@ -55,7 +53,7 @@ dev_dependencies:
     sdk: flutter
 
 
-  flutter_lints: ^2.0.0
+  flutter_lints: ^2.0.2
   mockito:
   build_runner:
   hive_generator:
