--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   connectivity_plus: ^4.0.2
+  image_picker: ^1.0.2
+  image_cropper: ^5.0.0
 
 dev_dependencies:
   flutter_test:
