--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   connectivity_plus: ^4.0.2
   image_picker: ^1.0.2
   image_cropper: ^5.0.0
+  web_socket_channel: ^2.4.0
 
 dev_dependencies:
   flutter_test:
