--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   cupertino_icons: ^1.0.5
   get: ^4.6.5
   logger: ^2.0.1
-  flutter_screenutil: ^5.8.4
+  flutter_screenutil: ^5.9.0
   dio: ^5.3.2
   http: ^1.1.0
   shared_preferences: ^2.2.0
@@ -34,16 +34,16 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   flutter_native_splash: ^2.3.2
   firebase_core: ^2.15.1
-  firebase_auth: ^4.7.3
-  cloud_firestore: ^4.8.5
-  firebase_messaging: ^14.6.6
+  firebase_auth: ^4.8.0
+  cloud_firestore: ^4.9.0
+  firebase_messaging: ^14.6.7
   carousel_slider: ^4.2.1
   cached_network_image: ^3.2.3
   graphql_flutter: ^5.1.2
   intl: ^0.18.1
   animated_text_kit: ^4.2.2
   device_info_plus: ^9.0.3
-  flutter_local_notifications: ^15.1.0+1
+  flutter_local_notifications: ^15.1.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   connectivity_plus: ^4.0.2
