--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,26 +16,26 @@ dependencies:
 
 
 
-  cupertino_icons: ^1.0.5
-  get: ^4.6.5
-  logger: ^2.0.1
+  cupertino_icons: ^1.0.6
+  get: ^4.6.6
+  logger: ^2.0.2
   flutter_screenutil: ^5.9.0
   dio: ^5.3.2
   http: ^1.1.0
-  shared_preferences: ^2.2.0
+  shared_preferences: ^2.2.1
   change_app_package_name: ^1.1.0
   iconly: ^1.0.1
   iconsax: ^0.0.8
   expandable_text: ^2.3.0
-  file_picker: ^5.3.4
+  file_picker: ^5.5.0
   lottie: ^2.6.0
   ionicons: ^0.2.2
   flutter_otp_text_field: ^1.1.1
   flutter_launcher_icons: ^0.13.1
   flutter_native_splash: ^2.3.2
   firebase_core: ^2.15.1
-  firebase_auth: ^4.8.0
-  cloud_firestore: ^4.9.0
+  firebase_auth: ^4.9.0
+  cloud_firestore: ^4.9.1
   firebase_messaging: ^14.6.7
   carousel_slider: ^4.2.1
   cached_network_image: ^3.2.3
@@ -47,7 +47,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   connectivity_plus: ^4.0.2
-  image_picker: ^1.0.2
+  image_picker: ^1.0.4
   image_cropper: ^5.0.0
   web_socket_channel: ^2.4.0
 
@@ -56,22 +56,33 @@ dev_dependencies:
     sdk: flutter
 
 
-  flutter_lints: ^2.0.2
+  flutter_lints: ^2.0.3
   mockito:
   build_runner:
   hive_generator:
   pub_semver:
 
 flutter_icons:
+  #  This image should be 512×512 pixels in rectangle.
+  #  Png file and should be sized for 1x pixel density.
   android: true
   ios: true
   remove_alpha_ios: true
   image_path: "assets/images/icon-splash/app_icon.png"
 
 flutter_native_splash:
-  background_image: assets/images/icon-splash/splash.png
+#  This image should be 512×512 pixels, and fit within a circle 512 pixels in diameter.
+#  Png file and should be sized for 1x pixel density.
+
+  image: "assets/images/icon-splash/splash_icon.png"
+  color: "#ffffff"
+  android_12:
+    image: "assets/images/icon-splash/splash_icon.png"
+    color: "#ffffff"
   android: true
   ios: true
+  web: false
+
 
 
 
