--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,10 +4,10 @@ description: A GetX Architecture by Mir Moktadir.
 publish_to: 'none'
 
 
-version: 1.4.9+34
+version: 1.5.0+35
 
 environment:
-  sdk: '>=3.0.5 <4.0.0'
+  sdk: '>=3.1.2 <4.0.0'
 
 
 dependencies:
@@ -18,9 +18,9 @@ dependencies:
 
   cupertino_icons: ^1.0.6
   get: ^4.6.6
-  logger: ^2.0.2
+  logger: ^2.0.2+1
   flutter_screenutil: ^5.9.0
-  dio: ^5.3.2
+  dio: ^5.3.3
   http: ^1.1.0
   shared_preferences: ^2.2.1
   change_app_package_name: ^1.1.0
@@ -33,10 +33,10 @@ dependencies:
   flutter_otp_text_field: ^1.1.1
   flutter_launcher_icons: ^0.13.1
   flutter_native_splash: ^2.3.2
-  firebase_core: ^2.15.1
-  firebase_auth: ^4.9.0
-  cloud_firestore: ^4.9.1
-  firebase_messaging: ^14.6.7
+  firebase_core: ^2.16.0
+  firebase_auth: ^4.10.0
+  cloud_firestore: ^4.9.2
+  firebase_messaging: ^14.6.8
   carousel_slider: ^4.2.1
   cached_network_image: ^3.2.3
   graphql_flutter: ^5.1.2
