--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   iconly: ^1.0.1
   iconsax: ^0.0.8
   expandable_text: ^2.3.0
-  file_picker: ^5.5.0
+  file_picker: ^6.1.1
   lottie: ^2.6.0
   ionicons: ^0.2.2
   flutter_otp_text_field: ^1.1.1
@@ -43,10 +43,10 @@ dependencies:
   intl: ^0.18.1
   animated_text_kit: ^4.2.2
   device_info_plus: ^9.0.3
-  flutter_local_notifications: ^15.1.1
+  flutter_local_notifications: ^16.1.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  connectivity_plus: ^4.0.2
+  connectivity_plus: ^5.0.1
   image_picker: ^1.0.4
   image_cropper: ^5.0.0
   web_socket_channel: ^2.4.0
@@ -56,7 +56,7 @@ dev_dependencies:
     sdk: flutter
 
 
-  flutter_lints: ^2.0.3
+  flutter_lints: ^3.0.1
   mockito:
   build_runner:
   hive_generator:
@@ -74,14 +74,12 @@ flutter_native_splash:
 #  This image should be 512×512 pixels, and fit within a circle 512 pixels in diameter.
 #  Png file and should be sized for 1x pixel density.
 
-  image: "assets/images/icon-splash/splash_icon.png"
-  color: "#ffffff"
+  background_image: "assets/images/icon-splash/splash_background.png"
   android_12:
     image: "assets/images/icon-splash/splash_icon.png"
-    color: "#ffffff"
-  android: true
-  ios: true
+    icon_background_color: "#ffffff"
   web: false
+  fullscreen: false
 
 
 
