--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-     "name": "GetXS",
-     "short_name": "GetXS",
+     "name": "GetX Standard",
+     "short_name": "GetX Standard",
      "start_url": ".",
      "display": "standalone",
      "background_color": "#0175C2",
