--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   image_picker: ^1.0.4
   image_cropper: ^5.0.1
   web_socket_channel: ^2.4.0
+  pretty_dio_logger: ^1.3.1
 
 
 dev_dependencies:
