--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: A GetX Architecture by Mir Moktadir.
 publish_to: 'none'
 
 
-version: 2.0.0+36
+version: 3.0.0+37
 
 environment:
   sdk: '>=3.1.2 <4.0.0'
@@ -31,14 +31,14 @@ dependencies:
   lottie: ^3.1.0
   ionicons: ^0.2.2
   flutter_otp_text_field: ^1.1.1
-  flutter_launcher_icons: ^0.13.1
+  flutter_launcher_icons: ^0.14.1
   flutter_native_splash: ^2.3.6
   rename_app: ^1.3.2
-  firebase_core: ^2.23.0
-  firebase_auth: ^4.14.1
-  cloud_firestore: ^4.13.2
-  firebase_messaging: ^14.7.5
-  carousel_slider: ^4.2.1
+  firebase_core: ^3.6.0
+  firebase_auth: ^5.3.1
+  cloud_firestore: ^5.4.3
+  firebase_messaging: ^15.1.3
+  carousel_slider: ^5.0.0
   cached_network_image: ^3.3.0
   graphql_flutter: ^5.1.2
   intl: ^0.19.0
@@ -47,9 +47,9 @@ dependencies:
   flutter_local_notifications: ^17.0.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  connectivity_plus: ^5.0.2
+  connectivity_plus: ^6.0.5
   image_picker: ^1.0.4
-  image_cropper: ^5.0.1
+  image_cropper: ^8.0.2
   web_socket_channel: ^2.4.0
   pretty_dio_logger: ^1.3.1
 
@@ -59,7 +59,7 @@ dev_dependencies:
     sdk: flutter
 
 
-  flutter_lints: ^3.0.1
+  flutter_lints: ^5.0.0
   mockito:
   build_runner:
   hive_generator:
@@ -71,6 +71,18 @@ flutter_icons:
   ios: true
   remove_alpha_ios: true
   image_path: "assets/images/icon-splash/app_icon.png"
+  web:
+    generate: true
+    image_path: "assets/images/icon-splash/app_icon.png"
+    background_color: "#hexcode"
+    theme_color: "#hexcode"
+  windows:
+    generate: true
+    image_path: "assets/images/icon-splash/app_icon.png"
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path: "assets/images/icon-splash/app_icon.png"
 
 flutter_native_splash:
 
