--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -58,5 +58,10 @@
     </array>
     <key>UIStatusBarHidden</key>
     <true/>
+    <key>LSApplicationQueriesSchemes</key>
+      <array>
+         <string>sms</string>
+         <string>tel</string>
+      </array>
   </dict>
 </plist>
