--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: getx_standard
 description: "A GetX Architecture by Mir Moktadir"
 
 publish_to: 'none'
-version: 7.0.8+54
+version: 8.0.0+55
 
 environment:
   sdk: ^3.6.0
@@ -24,14 +24,14 @@ dependencies:
   iconly: ^1.0.1
   iconsax: ^0.0.8
   expandable_text: ^2.3.0
-  file_picker: ^9.0.2
+  file_picker: ^10.3.2
   lottie: ^3.3.0
   ionicons: ^0.2.2
   flutter_otp_text_field: ^1.4.0+2
   flutter_native_splash: ^2.4.3
   rename_app: ^1.6.1
-  firebase_core: ^3.9.0
-  firebase_messaging: ^15.1.6
+  firebase_core: ^3.15.2
+  firebase_messaging: ^15.2.10
   carousel_slider: ^5.0.0
   cached_network_image: ^3.4.1
   graphql_flutter: ^5.2.0-beta.8
@@ -39,7 +39,7 @@ dependencies:
   url_launcher: ^6.3.1
   animated_text_kit: ^4.2.2
   device_info_plus: ^11.2.0
-  flutter_local_notifications: ^18.0.1
+  flutter_local_notifications: ^19.4.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   connectivity_plus: ^6.1.1
@@ -50,13 +50,14 @@ dependencies:
   remixicon: ^1.3.0
   timezone: ^0.10.0
   pusher_channels_flutter: ^2.4.0
+  package_info_plus: ^8.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
 
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
   mockito:
   build_runner:
   hive_generator:
