--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: getx_standard
 description: "A GetX Architecture by Mir Moktadir"
 
 publish_to: 'none'
-version: 8.0.0+55
+version: 8.0.1+56
 
 environment:
   sdk: ^3.6.0
@@ -30,27 +30,27 @@ dependencies:
   flutter_otp_text_field: ^1.4.0+2
   flutter_native_splash: ^2.4.3
   rename_app: ^1.6.1
-  firebase_core: ^3.15.2
-  firebase_messaging: ^15.2.10
+  firebase_core:
+  firebase_messaging:
   carousel_slider: ^5.0.0
   cached_network_image: ^3.4.1
   graphql_flutter: ^5.2.0-beta.8
   intl: ^0.20.1
   url_launcher: ^6.3.1
   animated_text_kit: ^4.2.2
-  device_info_plus: ^11.2.0
+  device_info_plus: ^12.1.0
   flutter_local_notifications: ^19.4.1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   connectivity_plus: ^6.1.1
   image_picker: ^1.1.2
-  image_cropper: ^9.0.0
+  image_cropper: ^10.0.0+1
   web_socket_channel: ^3.0.1
   pretty_dio_logger: ^1.4.0
   remixicon: ^1.3.0
   timezone: ^0.10.0
   pusher_channels_flutter: ^2.4.0
-  package_info_plus: ^8.3.0
+  package_info_plus: ^9.0.0
 
 dev_dependencies:
   flutter_test:
