--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,8 @@ dependencies:
 
   cupertino_icons: ^1.0.8
   flutter_screenutil: ^5.9.3
-  get: ^4.7.2
+  flutter_riverpod: ^2.6.1
+  go_router: ^14.6.2
   flutter_native_splash: ^2.4.7
   flutter_local_notifications: ^19.5.0
   dio: ^5.9.0
