--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -38,6 +38,8 @@
         </activity>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
+                <meta-data android:name="com.google.firebase.messaging.default_notification_channel_id" android:value="notification_channel"/>
+
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
